# guitar-learner

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CmakeWin.txt  README.md  cmakeDebug  cmakeRelease  cmakeWithBuildType  test_all.sh  win_options
Code/Main/: main.cpp  main_helper.cpp  main_helper.hpp
Code/Main/inc/: AddChordCommand.h  AddOneMinuteChangeCommand.h  ChangeChordCommand.h  Command.h  CommandFactory.h  ConfigCommand.h  GuitarLearnerCommand.h  ListBestResults.h  ListChordsCommand.h  ListOneMinuteChanges.h  ProgramOptions.h  RemoveChordCommand.h  ShowWorstChange.h  ShowWorstChanges.h  main_helper.hpp
Code/Main/src/: AddChordCommand.cpp  AddOneMinuteChangeCommand.cpp  ChangeChordCommand.cpp  ConfigCommand.cpp  ListBestResults.cpp  ListChordsCommand.cpp  ListOneMinuteChanges.cpp  ProgramOptions.cpp  RemoveChordCommand.cpp  ShowWorstChange.cpp  ShowWorstChanges.cpp  main_helper.cpp
Code/one_minute_changes/inc/: Chord.hpp  ChordReader.hpp  ChordWriter.hpp  DatabaseFileReader.hpp  DatabaseFileReaderVer1.hpp  DatabaseFileWriter.hpp  DatabaseFileWriterVer1.hpp  OneMinuteChange.hpp  OneMinuteChangesSet.hpp  Tab.hpp
Code/one_minute_changes/src/: Chord.cpp  ChordReader.cpp  ChordWriter.cpp  DatabaseFileReader.cpp  DatabaseFileReaderVer1.cpp  DatabaseFileWriter.cpp  DatabaseFileWriterVer1.cpp  OneMinuteChange.cpp  OneMinuteChangesSet.cpp  Tab.cpp
Test/: CMakeLists.txt
Test/inc/one_minute_changesMocks/: OneMinuteChangeMock.hpp  TabMock.hpp
Test/src/: mainTest.cpp
Test/src/MainTests/: ProgramOptionsTest.cpp
Test/src/one_minute_changesTests/: ChordReaderTest.cpp  ChordTest.cpp  ChordWriterTest.cpp  DatabaseFileReaderTest.cpp  DatabaseFileWriterTest.cpp  DatabaseFileWriterVer1Test.cpp  OneMinuteChangeTest.cpp  OneMinuteChangesSetTest.cpp  TabTest.cpp
docs/: man.txt  man_config.txt
